--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+opencv (3.2.0+dfsg-6) unstable; urgency=medium
+
+  * Team upload.
+
+  [ Mattia Rizzolo ]
+  * Import security update from Ubuntu.
+
+  [ Nobuhiro Iwamatsu ]
+  * Change Vcs-Git and Vcs-Browser to salsa.
+
+ -- Mattia Rizzolo <mattia@debian.org>  Tue, 12 Feb 2019 12:26:31 +0100
+
 opencv (3.2.0+dfsg-5ubuntu1) disco; urgency=low
 
   * Merge from Debian unstable.  Remaining changes:
